# rnn_mnist

./: .gitignore  README.md  prepare.py  pyproject.toml  train.py
